--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,20 @@ html {
   min-width: 300px;
   overflow-x: hidden;
   overflow-y: scroll;
+  --font-family: "Open Sans", "Rubik";
 }
 
 :root {
+  --color-white: #c5c3c6;
+  --color-purple: #1985a1;
+  --color-blue: #4c5c68;
+  --color-dark-blue: #46494c;
+  --color-pink: #46494c;
+  --color-dark: #1985a1;
+  --color-footer: #4c5c68;
+}
+
+/* :root {
   --color-white: #fff;
   --color-purple: #7209b7;
   --color-blue: #4895ef;
@@ -25,7 +36,7 @@ html {
   min-width: 300px;
   overflow-x: hidden;
   overflow-y: scroll;
-}
+} */
 
 /* Provide consistent margin and padding across browsers */
 html,
@@ -42,7 +53,7 @@ h3 {
 html {
   box-sizing: border-box;
   display: block;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.45;
   font-family: var(--font-family);
@@ -51,7 +62,7 @@ html {
 
 @media (min-width: 900px) {
   html {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
@@ -79,7 +90,7 @@ h1 {
 
 /* Set h2 font sizing */
 h2 {
-  font-size: 2rem;
+  font-size: 2.25rem;
   font-weight: 2rem;
   line-height: 2.25rem;
 }
@@ -97,13 +108,15 @@ h4 {
 }
 
 p {
+  font-weight: bold;
   font-style: normal;
   font-size: 1rem;
+  font-family: "Zen Kaku Gothic Antique";
 }
 
 /* Set strong font characteristics */
 strong {
-  color: var(--color-pink);
+  color: var(--color-purple);
   font-weight: 600;
 }
 
@@ -111,7 +124,7 @@ strong {
 header {
   border-bottom: 4px solid var(--color-pink);
   background-color: var(--color-dark-blue);
-  padding: 0.5rem calc(5vw - 0.5rem);
+  padding: 1rem calc(5vw - 0.5rem);
   /* padding: 1rem; */
 }
 
@@ -128,11 +141,15 @@ footer {
 
 /* NAV */
 /* Temp nav logo */
-.nav-logo {
+header {
+  border-bottom: 3px solid var(--color-purple);
+}
+
+/* .nav-logo {
   height: 50px;
   width: 50px;
   background-color: #4895ef;
-}
+} */
 
 .nav-links a {
   padding: 1rem;
@@ -146,6 +163,70 @@ footer {
   color: var(--color-purple);
 }
 
+nav p {
+  display: inline;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 /* 
 //////////////////////////////
 //////      INTRO       //////
@@ -153,7 +234,7 @@ footer {
 */
 
 .intro {
-  border-bottom: 3px solid var(--color-pink);
+  border-bottom: 1px solid var(--color-dark-blue);
 }
 
 .intro-container {
@@ -162,10 +243,11 @@ footer {
   flex-wrap: wrap-reverse;
   justify-content: center;
   align-items: center;
-  gap: 0 3rem;
+  gap: 0 10rem;
   position: relative;
   margin: 0 auto;
   width: 90vw;
+  max-width: 1100px;
 }
 
 .headline {
@@ -192,7 +274,7 @@ footer {
 .headline p {
   color: var(--color-pink);
   font-style: normal;
-  font-size: 1.5rem;
+  font-size: 1.15rem;
   padding: 1.5rem 0;
   text-align: center;
 }
@@ -203,14 +285,14 @@ footer {
 }
 
 .me-pic img {
-  filter: drop-shadow(20px 0px 0px var(--color-pink));
+  filter: drop-shadow(10px 0px 0px var(--color-purple));
   width: 100%;
   max-height: 50vh;
   display: block;
 }
 
 .me-pic img:hover {
-  filter: drop-shadow(-20px 0px 0px var(--color-purple));
+  filter: drop-shadow(-10px 0px 0px var(--color-pink));
   right: -20px;
 }
 
@@ -245,7 +327,7 @@ footer {
 .about {
   background-color: var(--color-blue);
   position: relative;
-  border-bottom: 2px solid var(--color-pink);
+  border-bottom: 1px solid var(--color-purple);
 }
 
 .about-headers h2 {
@@ -259,7 +341,7 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
   margin: 0 auto;
   max-width: 90vw;
 }
@@ -268,7 +350,16 @@ footer {
   color: var(--color-white);
   text-align: center;
   margin: 0 auto;
-  max-width: 55rem;
+  max-width: 30rem;
+  text-align: left;
+}
+
+.socials p {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--color-dark-blue);
+  font-family: "Roboto", sans-serif;
 }
 
 .social-contacts {
@@ -278,7 +369,7 @@ footer {
   grid-template-columns: repeat(3, 60px);
   justify-content: center;
   list-style: none;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .social-link {
@@ -308,7 +399,7 @@ footer {
 }
 .social-link:focus path,
 .social-link:hover path {
-  fill: var(--color-dark-blue);
+  fill: var(--color-purple);
   transition-delay: 0ms;
 }
 
@@ -324,14 +415,14 @@ footer {
 }
 
 .circle-image {
-  filter: drop-shadow(10px 10px 0px var(--color-pink));
+  filter: drop-shadow(10px 10px 0px var(--color-purple));
   display: block;
   width: 100%;
 }
 
 .photos {
   /* margin: 0 auto; */
-  max-width: 20rem;
+  max-width: 15rem;
   padding: 0 0 2rem 0;
 }
 
@@ -350,7 +441,7 @@ footer {
 
 .my-work {
   background-color: var(--color-dark-blue);
-  border-bottom: 2px solid var(--color-pink);
+  border-bottom: 1px solid var(--color-white);
 }
 
 .my-work-headers {
@@ -391,11 +482,11 @@ footer {
 
 .my-work-spec {
   background-color: var(--color-blue);
-  border: 4px solid var(--color-pink);
+  border: 4px solid var(--color-purple);
   box-sizing: border-box;
   box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2%;
-  /* width: 400px; */
+  max-width: 320px;
   /* max-width: 40rem; */
   /* margin: 2rem; */
   /* padding: 2rem 5rem; */
@@ -457,15 +548,16 @@ footer {
 
 footer {
   background-color: var(--color-footer);
-  height: 100px;
-  /* position: relative; */
+  height: 80px;
+  position: relative;
 }
 
 footer p {
-  /* margin: 0;
+  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem; */
+  font-size: 0.8rem;
+  font-weight: bold;
 }
